add appropriate top margin to fragment

--- a/sample/src/main/res/layout/activity_main.xml
+++ b/sample/src/main/res/layout/activity_main.xml
@@ -26,6 +26,7 @@
         android:id="@+id/sample_fragment"
         class="com.jayrave.uxLayouts.sample.SingleUxLayoutFragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:layout_marginTop="?attr/actionBarSize"/>
 
 </android.support.design.widget.CoordinatorLayout>
