--- a/ux-layouts/src/main/res/values/attrs.xml
+++ b/ux-layouts/src/main/res/values/attrs.xml
@@ -2,11 +2,11 @@
 <resources>
 
     <declare-styleable name="UxLayout">
-        <attr name="ux_loading_layout_res_id" format="reference"/>
-        <attr name="ux_content_layout_res_id" format="reference"/>
-        <attr name="ux_empty_state_layout_res_id" format="reference"/>
-        <attr name="ux_error_layout_res_id" format="reference"/>
-        <attr name="ux_retry_layout_res_id" format="reference"/>
+        <attr name="ux_loading_layout" format="reference"/>
+        <attr name="ux_content_layout" format="reference"/>
+        <attr name="ux_empty_state_layout" format="reference"/>
+        <attr name="ux_error_layout" format="reference"/>
+        <attr name="ux_retry_layout" format="reference"/>
     </declare-styleable>
 
     <declare-styleable name="UxLayout_Layout">
